--- a/BasketballGame/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/BasketballGame/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -220,7 +220,7 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,
 DirectionalLight=PostProcessVolume.Lens.Lens
 CapsuleComponent=
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 MaterialInstanceConstant=
 SceneComponent=PostProcessVolume.Lens.Lens,
 BP_CollisionActor_C=PostProcessVolume.Lens.Lens,
@@ -230,6 +230,7 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 PlayerStart=PostProcessVolume.Lens.Lens,
 BP_Sky_Sphere_C=PostProcessVolume.Lens.Lens,
 BP_Basketball_C=PostProcessVolume.Lens.Lens,
+IKRigBoneDetails=IKRigBoneDetails.Transforms.Current,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -249,7 +250,7 @@ ContentBrowserDrawer.ActiveTypeFilters=World
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Anklebreaker/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -287,12 +288,36 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+ContentBrowserTab1.SelectedPaths=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A
+ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.Locked=False
+ContentBrowserTab1.FavoritesAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.CollectionAreaExpanded=False
+ContentBrowserTab1.FavoritesSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.CollectionSearchAreaExpanded=False
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.EnabledTypeFilters=
+ContentBrowserTab1.ActiveFrontendFilters=
+ContentBrowserTab1.EnabledFrontendFilters=
+ContentBrowserTab1.PluginFilters=
+ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.SelectedCollections=
+ContentBrowserTab1.ExpandedCollections=
+ContentBrowserTab1.ThumbnailSize=2
+ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/Anklebreaker/Scenes/TestEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -940,6 +965,66 @@ SceneComponent.Rendering=True
 SceneComponent.Events=True
 BP_Basketball_C.TransformCommon=True
 CharacterMovementComponent.Collision=True
+ABP_Manny_C.Essential Movement Data=True
+ABP_Manny_C.EssentialMovementData=True
+ABP_Manny_C.RootMotion=True
+ABP_Manny_C.Notifies=True
+ABP_Manny_C.Montage=True
+ABP_Manny_C.References=True
+AnimGraphNode_ControlRig.Settings=True
+AnimGraphNode_ControlRig.Input=True
+AnimGraphNode_ControlRig.Functions=True
+AnimGraphNode_ControlRig.Output=True
+AnimGraphNode_ControlRig.Tag=True
+AnimGraphNode_ControlRig.ControlRig=True
+AnimGraphNode_ControlRig.Performance=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
+AnimGraphNode_Slot.Settings=True
+AnimGraphNode_Slot.Functions=True
+AnimGraphNode_Slot.Tag=True
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+IKRigBoneDetails.Selection=True
+IKRigBoneDetails.Transforms=True
+IKRetargeter.Rigs=True
+IKRetargeter.RetargetPhases=True
+IKRetargeter.TargetActorPreview=True
+IKRetargeter.PoseEditSettings=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
+MaterialExpressionTextureSampleParameter2D.ParameterCustomization=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.MasterPoseComponent=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.AnimationRig=True
+SkeletalMeshActor.Deformer=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.HLOD=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1044,24 +1129,33 @@ PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" "
 ActorComponent=
+SkeletalMeshComponent="\"Object.Mesh.SkinCacheUsage\" "
+SkinnedMeshComponent="\"Object.Mesh.SkinCacheUsage\" "
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Anklebreaker/Blueprints/BP_Basketball
-MRUItem1=/Game/Anklebreaker/Scenes/TestEnvironment
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/Anklebreaker/Materials/MAT_SampleMaterial
-MRUItem4=/Game/StarterContent/Maps/StarterMap
-MRUItem5=/Game/Anklebreaker/Materials/Modifiable/MOD_GRID
-MRUItem6=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem7=/Game/Characters/Mannequins/Meshes/SKM_Quinn
-MRUItem8=/Game/Anklebreaker/ANIM_DATA/ANIM_Shooting
-MRUItem9=/Game/Anklebreaker/ANIM_DATA/Test_IKRig
-MRUItem10=/Game/Anklebreaker/Materials/MAT_Grid
-MRUItem11=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem12=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem0=/Game/Anklebreaker/Textures/T_BasketballHoop_Normal
+MRUItem1=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A_Anim_BasketBallHoopA_BasketMade
+MRUItem2=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/BasketBallHoop
+MRUItem3=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A
+MRUItem4=/Game/Anklebreaker/Materials/MAT_MasterMaterial
+MRUItem5=/Game/Anklebreaker/Textures/T_BasketballHoop_Opacity
+MRUItem6=/Game/Anklebreaker/Materials/Modifiable/MOD_BasketBallRim
+MRUItem7=/Game/Anklebreaker/Scenes/TestEnvironment
+MRUItem8=/Game/Anklebreaker/Textures/T_BasketballHoop_ORM
+MRUItem9=/Game/Anklebreaker/Materials/MAT_SampleMaterial
+MRUItem10=/Game/Anklebreaker/Textures/T_BasketballHoop_BaseColor
+MRUItem11=/Game/Anklebreaker/ANIM_DATA/Test
+MRUItem12=/Game/Anklebreaker/ANIM_DATA/GameRigTest
 MRUItem13=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem14=/Game/Anklebreaker/Blueprints/BP_CollisionActor
-MRUItem15=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem14=/Game/Anklebreaker/ANIM_DATA/source
+MRUItem15=/Game/Anklebreaker/ANIM_DATA/ANIM_ShootingA_Skeleton
+MRUItem16=/Game/Anklebreaker/ANIM_DATA/anim_TEST_Anim_Retargeted
+MRUItem17=/Game/Anklebreaker/ANIM_DATA/AnimTest
+MRUItem18=/Game/Anklebreaker/ANIM_DATA/Test_IKRig
+MRUItem19=/Game/Anklebreaker/ANIM_DATA/anim_TEST_PhysicsAsset
 
 [DetailCategoriesAdvanced]
 BP_ThirdPersonCharacter_C.Tick=False
@@ -1072,6 +1166,8 @@ FbxExportOption.Exporter=False
 K2Node_VariableGet.Variable=False
 SphereComponent.Physics=True
 BP_ThirdPersonCharacter_C.Actor=False
+SkeletalMeshComponent.Animation=True
+PreviewMaterial.Translucency=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -1090,6 +1186,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [PlacementMode]
+RecentlyPlaced=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A.M_BasketBallHoop_A;
 RecentlyPlaced=/Game/Anklebreaker/Blueprints/BP_Basketball.BP_Basketball;
 RecentlyPlaced=/Game/Anklebreaker/Materials/Modifiable/MOD_GRID.MOD_GRID;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1118,6 +1215,21 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 /Game/Anklebreaker/Materials/Modifiable/MOD_GRID.MOD_GRID=1
 /Game/Anklebreaker/Materials/MAT_SampleMaterial.MAT_SampleMaterial=1
 /Game/Anklebreaker/Blueprints/BP_Basketball.BP_Basketball=1
+/Game/Anklebreaker/ANIM_DATA/Test_IKRig.Test_IKRig=1
+/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny=1
+/Game/Anklebreaker/ANIM_DATA/anim_TEST.anim_TEST=1
+/Game/Anklebreaker/ANIM_DATA/GameRigTest.GameRigTest=1
+/Game/Anklebreaker/ANIM_DATA/source.source=1
+/Game/Anklebreaker/ANIM_DATA/AnimTest.AnimTest=1
+/Game/Anklebreaker/Textures/T_BasketballHoop_BaseColor.T_BasketballHoop_BaseColor=1
+/Game/Anklebreaker/Materials/MAT_MasterMaterial.MAT_MasterMaterial=1
+/Game/Anklebreaker/Textures/T_BasketballHoop_ORM.T_BasketballHoop_ORM=1
+/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/BasketBallHoop.BasketBallHoop=1
+/Game/Anklebreaker/Materials/Modifiable/MOD_BasketBallRim.MOD_BasketBallRim=1
+/Game/Anklebreaker/Textures/T_BasketballHoop_Opacity.T_BasketballHoop_Opacity=1
+/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A.M_BasketBallHoop_A=1
+/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A_Anim_BasketBallHoopA_BasketMade.M_BasketBallHoop_A_Anim_BasketBallHoopA_BasketMade=1
+/Game/Anklebreaker/Textures/T_BasketballHoop_Normal.T_BasketballHoop_Normal=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2177,6 +2289,7 @@ LastLogListing=FBXImport
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2184,13 +2297,13 @@ bAlwaysOpenAnimationAssetsInNewTab=False
 bMuteAudio=False
 bUseAudioAttenuation=True
 DefaultLocalAxesSelection=2
-DefaultBoneDrawSelection=1
+DefaultBoneDrawSelection=5
 SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
 NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
 BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
 bUseInlineSocketEditor=False
 bFlattenSkeletonHierarchyWhenFiltering=False
-bHideParentsWhenFiltering=False
+bHideParentsWhenFiltering=True
 bExpandTreeOnSelection=True
 bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
 bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
@@ -2198,10 +2311,11 @@ bAllowMeshSectionSelection=False
 NumFolderFiltersInAssetBrowser=2
 AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
-AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=6,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="IKRigEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="IKRetargetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 CurveEditorSnapInterval=0.010000
 TimelineScrubSnapValue=1000
 TimelineDisplayFormat=Frames
@@ -2230,6 +2344,11 @@ Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="IKRigEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
+Contexts=(Name="IKRetargetEditor.Viewport0",Commands=)
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2020
@@ -2304,7 +2423,10 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
