Updated Hoop Model A + BaseColor Texture

--- a/BasketballGame/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/BasketballGame/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -221,7 +221,7 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,Inp
 DirectionalLight=PostProcessVolume.Lens.Lens
 CapsuleComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 SceneComponent=PostProcessVolume.Lens.Lens,
 BP_CollisionActor_C=PostProcessVolume.Lens.Lens,
 Actor=PostProcessVolume.Lens.Lens,
@@ -250,7 +250,7 @@ ContentBrowserDrawer.ActiveTypeFilters=World
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A
+ContentBrowserDrawer.SelectedPaths=/Game/Anklebreaker/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -318,6 +318,8 @@ LastLevel=/Game/Anklebreaker/Scenes/TestEnvironment
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Anklebreaker/Materials/MAT_MasterMaterial.MAT_MasterMaterial
+OpenAssetsAtExit=/Game/Anklebreaker/Materials/Modifiable/MOD_BasketBallRim.MOD_BasketBallRim
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1025,6 +1027,8 @@ SkeletalMeshActor.Cooking=True
 SkeletalMeshActor.Replication=True
 SkeletalMeshActor.Input=True
 SkeletalMeshActor.Actor=True
+MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
+MaterialExpressionFunctionOutput.MaterialExpression=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1136,26 +1140,26 @@ PrimitiveComponent=
 SceneComponent=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Anklebreaker/Textures/T_BasketballHoop_Normal
-MRUItem1=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A_Anim_BasketBallHoopA_BasketMade
-MRUItem2=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/BasketBallHoop
-MRUItem3=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A
-MRUItem4=/Game/Anklebreaker/Materials/MAT_MasterMaterial
-MRUItem5=/Game/Anklebreaker/Textures/T_BasketballHoop_Opacity
-MRUItem6=/Game/Anklebreaker/Materials/Modifiable/MOD_BasketBallRim
-MRUItem7=/Game/Anklebreaker/Scenes/TestEnvironment
-MRUItem8=/Game/Anklebreaker/Textures/T_BasketballHoop_ORM
-MRUItem9=/Game/Anklebreaker/Materials/MAT_SampleMaterial
-MRUItem10=/Game/Anklebreaker/Textures/T_BasketballHoop_BaseColor
-MRUItem11=/Game/Anklebreaker/ANIM_DATA/Test
-MRUItem12=/Game/Anklebreaker/ANIM_DATA/GameRigTest
-MRUItem13=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem14=/Game/Anklebreaker/ANIM_DATA/source
-MRUItem15=/Game/Anklebreaker/ANIM_DATA/ANIM_ShootingA_Skeleton
-MRUItem16=/Game/Anklebreaker/ANIM_DATA/anim_TEST_Anim_Retargeted
-MRUItem17=/Game/Anklebreaker/ANIM_DATA/AnimTest
-MRUItem18=/Game/Anklebreaker/ANIM_DATA/Test_IKRig
-MRUItem19=/Game/Anklebreaker/ANIM_DATA/anim_TEST_PhysicsAsset
+MRUItem0=/Game/Anklebreaker/Materials/Modifiable/MOD_BasketBallRim
+MRUItem1=/Game/Anklebreaker/Materials/MAT_MasterMaterial
+MRUItem2=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
+MRUItem3=/Game/Anklebreaker/Scenes/TestEnvironment
+MRUItem4=/Game/Anklebreaker/Textures/T_BasketballHoop_Normal
+MRUItem5=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A_Anim_BasketBallHoopA_BasketMade
+MRUItem6=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/BasketBallHoop
+MRUItem7=/Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A
+MRUItem8=/Game/Anklebreaker/Textures/T_BasketballHoop_Opacity
+MRUItem9=/Game/Anklebreaker/Textures/T_BasketballHoop_ORM
+MRUItem10=/Game/Anklebreaker/Materials/MAT_SampleMaterial
+MRUItem11=/Game/Anklebreaker/Textures/T_BasketballHoop_BaseColor
+MRUItem12=/Game/Anklebreaker/ANIM_DATA/Test
+MRUItem13=/Game/Anklebreaker/ANIM_DATA/GameRigTest
+MRUItem14=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem15=/Game/Anklebreaker/ANIM_DATA/source
+MRUItem16=/Game/Anklebreaker/ANIM_DATA/ANIM_ShootingA_Skeleton
+MRUItem17=/Game/Anklebreaker/ANIM_DATA/anim_TEST_Anim_Retargeted
+MRUItem18=/Game/Anklebreaker/ANIM_DATA/AnimTest
+MRUItem19=/Game/Anklebreaker/ANIM_DATA/Test_IKRig
 
 [DetailCategoriesAdvanced]
 BP_ThirdPersonCharacter_C.Tick=False
@@ -1230,6 +1234,7 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 /Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A.M_BasketBallHoop_A=1
 /Game/Anklebreaker/Meshes/Props/BasketballHoop_A/M_BasketBallHoop_A_Anim_BasketBallHoopA_BasketMade.M_BasketBallHoop_A_Anim_BasketBallHoopA_BasketMade=1
 /Game/Anklebreaker/Textures/T_BasketballHoop_Normal.T_BasketballHoop_Normal=1
+/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast.CheapContrast=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2289,7 +2294,6 @@ LastLogListing=FBXImport
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2423,7 +2427,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
