--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 ProjectAnkleBreaker_Unity/.vsconfig
+ProjectAnkleBreaker_Unity/UserSettings/Search.settings
