--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 ProjectAnkleBreaker_Unity/.vsconfig
 ProjectAnkleBreaker_Unity/UserSettings/Search.settings
+ProjectAnkleBreaker_Unity/UserSettings/EditorUserSettings.asset
