Update to ignore and made ball attach to the player

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ crashlytics-build.properties
 ProjectAnkleBreaker_Unity/.vsconfig
 ProjectAnkleBreaker_Unity/UserSettings/Search.settings
 ProjectAnkleBreaker_Unity/UserSettings/EditorUserSettings.asset
+ProjectAnkleBreaker_Unity/UserSettings/Search.settings
+ProjectAnkleBreaker_Unity/UserSettings/Search.index
+ProjectAnkleBreaker_Unity/UserSettings/Search.settings
