--- a/ProjectAnkleBreaker_Unity/Packages/manifest.json
+++ b/ProjectAnkleBreaker_Unity/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.inputsystem": "1.0.2",
     "com.unity.probuilder": "5.0.6",
     "com.unity.render-pipelines.universal": "11.0.0",
+    "com.unity.scriptablebuildpipeline": "1.15.2",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.5.5",
